# ps1-recomp

./: .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  config.toml
analyzer/: CMakeLists.txt
analyzer/include/ps1recomp/: config_generator.h  disc_reader.h  elf_parser.h  function_finder.h
analyzer/src/: config_generator.cpp  elf_parser.cpp  main.cpp  overlay_scanner.cpp  psyq_signatures.cpp
configs/: crash.toml  sh.toml  (+5 more)
ps1Analyzer/: CMakeLists.txt
ps1Analyzer/data/: psyq_metadata.toml  psyq_signatures.toml
ps1Analyzer/include/ps1recomp/: config_generator.h  disc_reader.h  elf_parser.h  function_finder.h  overlay_scanner.h  psyq_signatures.h
ps1Analyzer/src/: config_generator.cpp  disc_reader.cpp  elf_parser.cpp  function_finder.cpp  main.cpp  overlay_scanner.cpp  psyq_signatures.cpp
ps1Recomp/: CMakeLists.txt
ps1Recomp/include/ps1recomp/: gte_emitter.h  hle_emitter.h  instruction_emitter.h  mips_decoder.h  overlay_handler.h
ps1Recomp/src/: gte_emitter.cpp  hle_emitter.cpp  instruction_emitter.cpp  main.cpp  mips_decoder.cpp  overlay_handler.cpp
ps1Runtime/: CMakeLists.txt
ps1Runtime/include/runtime/: cdrom.h  config.h  cpu_context.h  dma.h  emu_globals.h  emuptr.h  gpu.h  gte.h  input.h  memory.h  overlay_manager.h  ps1_runtime_macros.h  save_state.h  spu.h
ps1Runtime/include/runtime/bios/: bios.h  file_io.h  heap.h
ps1Runtime/include/runtime/cdrom/: bin_reader.h  cdrom_controller.h  iso9660.h  virtual_fs.h
ps1Runtime/include/runtime/dma/: dma.h
ps1Runtime/include/runtime/gpu/: gpu.h
ps1Runtime/include/runtime/input/: input.h
ps1Runtime/include/runtime/mdec/: mdec.h
ps1Runtime/include/runtime/psyq/: psyq_font.h  psyq_hle.h  psyq_libapi.h  psyq_libc.h  psyq_libcd.h  psyq_libetc.h  psyq_libgpu.h  psyq_libgte.h  psyq_pad.h  psyq_registry.h  psyq_state.h
ps1Runtime/include/runtime/spu/: spu.h
ps1Runtime/include/runtime/timers/: timers.h
ps1Runtime/src/: config.cpp  gte.cpp  main_host.cpp  overlay_manager.cpp  recompiled_out_stub.cpp  save_state.cpp
ps1Runtime/src/bios/: bios.cpp  bios_internal.h  event_system.cpp  syscall_a.cpp  syscall_b.cpp  syscall_c.cpp
ps1Runtime/src/cdrom/: cdrom_controller.cpp  cue_parser.cpp
ps1Runtime/src/dma/: dma.cpp
ps1Runtime/src/gpu/: gpu.cpp  renderer_opengl.cpp
ps1Runtime/src/input/: input.cpp
ps1Runtime/src/mdec/: mdec.cpp
ps1Runtime/src/psyq/: psyq_font.cpp  psyq_hle.cpp  psyq_libapi.cpp  psyq_libc.cpp  psyq_libcd.cpp  psyq_libetc.cpp  psyq_libgpu.cpp  psyq_libgte.cpp  psyq_pad.cpp  psyq_registry.cpp  psyq_state.cpp
ps1Runtime/src/spu/: spu.cpp
ps1Runtime/src/timers/: timers.cpp
ps1Test/: CMakeLists.txt
ps1Test/analyzer/: test_config_generator.cpp  test_elf_parser.cpp  test_function_finder.cpp  test_overlay_scanner.cpp  test_psyq_hash_matching.cpp  test_psyq_signatures.cpp
ps1Test/pipeline/: test_pipeline.cpp
ps1Test/recompiler/: test_gte_emitter.cpp  test_hle_emission.cpp  test_instruction_emitter.cpp  test_mips_decoder.cpp  test_overlay_handler.cpp
ps1Test/runtime/: test_bios.cpp  test_bios_custom_exception.cpp  test_bios_table_a.cpp  test_cdrom_controller.cpp  test_cpu_context.cpp  test_dma.cpp  test_emuptr.cpp  test_exe_extractor.cpp  test_game_validation.cpp  test_gpu_lines_rects.cpp  test_gpu_screenshot.cpp  test_gte.cpp  test_hw_stubs.cpp  test_input.cpp  test_mdec.cpp  test_memory.cpp  test_overlay_manager.cpp  test_psyq_cd.cpp  test_psyq_font.cpp  test_psyq_gpu.cpp  test_psyq_gte.cpp  test_psyq_hle.cpp  test_psyq_libapi.cpp  test_psyq_libc.cpp  test_psyq_pad.cpp  test_psyq_registry.cpp  test_psyq_state.cpp  test_runtime_macros.cpp  test_save_state.cpp  test_spu.cpp  test_stubs.cpp  test_timers.cpp
ps1xAnalyzer/: CMakeLists.txt
ps1xAnalyzer/include/ps1recomp/: overlay_scanner.h  psyq_signatures.h
ps1xAnalyzer/src/: disc_reader.cpp  function_finder.cpp  main.cpp  psyq_signatures.cpp
ps1xInterface/: CMakeLists.txt
ps1xInterface/include/: StudioState.hpp
ps1xInterface/src/: StudioState.cpp  main.cpp
ps1xRuntime/: CMakeLists.txt
ps1xRuntime/include/runtime/: config.h  cpu_context.h  dma.h  input.h  overlay_manager.h  save_state.h
ps1xRuntime/include/runtime/cdrom/: cdrom_controller.h
ps1xRuntime/include/runtime/psyq/: psyq_hle.h
ps1xRuntime/include/runtime/spu/: spu.h
ps1xRuntime/src/: gte.cpp  main_host.cpp  overlay_manager.cpp  recompiled_out.cpp  recompiled_out_stub.cpp  save_state.cpp
ps1xRuntime/src/bios/: bios.cpp  file_io.cpp  heap.cpp
ps1xRuntime/src/cdrom/: bin_reader.cpp  cdrom_controller.cpp  iso9660.cpp
ps1xRuntime/src/gpu/: gpu.cpp  renderer_opengl.cpp
ps1xRuntime/src/input/: input.cpp
ps1xRuntime/src/mdec/: mdec.cpp
ps1xRuntime/src/psyq/: psyq_hle.cpp
ps1xRuntime/src/timers/: timers.cpp
recompiler/: CMakeLists.txt
recompiler/include/ps1recomp/: gte_emitter.h  instruction_emitter.h  overlay_handler.h
recompiler/src/: instruction_emitter.cpp  main.cpp
runtime/: CMakeLists.txt
runtime/include/runtime/: cpu_context.h  gpu.h  memory.h  ps1_runtime_macros.h
runtime/src/: config.cpp  main.cpp  main_host.cpp  overlay_manager.cpp  recompiled_out.cpp
runtime/src/bios/: bios.cpp  event_system.cpp  file_io.cpp
runtime/src/cdrom/: cdrom_controller.cpp  exe_extractor.cpp  virtual_fs.cpp
runtime/src/dma/: dma.cpp
runtime/src/gpu/: gpu.cpp  renderer_opengl.cpp
runtime/src/mdec/: mdec.cpp
runtime/src/spu/: spu.cpp
tests/: CMakeLists.txt
tests/analyzer/: test_config_generator.cpp  test_elf_parser.cpp
tests/pipeline/: test_elf_loader.cpp  test_function_resolver.cpp  test_pipeline.cpp
tests/recompiler/: test_gte_emitter.cpp  test_instruction_emitter.cpp  test_mips_decoder.cpp  test_overlay_handler.cpp
tests/runtime/: test_bios.cpp  test_bios_integration.cpp  test_bios_table_c.cpp  test_cpu_context.cpp  test_cue_parser.cpp  test_event_system.cpp  test_game_validation.cpp  test_gpu_blend.cpp  test_gpu_display.cpp  test_gpu_dma.cpp  test_gpu_textures.cpp  test_heap.cpp  test_hw_stubs.cpp  test_memory.cpp  test_runtime_macros.cpp  test_virtual_fs.cpp
(+83 files in other folders)
